--- a/tutorials/tutorial03/package.json
+++ b/tutorials/tutorial03/package.json
@@ -3,16 +3,14 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build:tailwind": "tailwindcss -i ./src/input.css -o public/output.css --watch"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "tailwindcss": "^4.0.4"
-  },
-  "dependencies": {
-    "@tailwindcss/cli": "^4.0.4"
+    "tailwindcss": "^3.4.10"
   }
 }
