--- a/tutorials/tutorial09/pyproject.toml
+++ b/tutorials/tutorial09/pyproject.toml
@@ -1,18 +1,16 @@
-[project]
+[tool.poetry]
 name = "tutorial09"
 version = "0.1.0"
 description = ""
-authors = [
-    {name = "Sarah",email = "svanwart@unca.edu"}
-]
-package-mode = false
-requires-python = ">=3.9"
-dependencies = [
-    "flask (>=3.1.0,<4.0.0)",
-    "requests (>=2.32.3,<3.0.0)"
-]
+authors = ["kgary432 <kgary7373@gmail.com>"]
+readme = "README.md"
+
+[tool.poetry.dependencies]
+python = "^3.12"
+flask = "^3.1.0"
+requests = "^2.32.3"
 
 
 [build-system]
-requires = ["poetry-core>=2.0.0,<3.0.0"]
+requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
