--- a/lectures/orm-introduction/.env
+++ b/lectures/orm-introduction/.env
@@ -1,4 +1,4 @@
 FLASK_APP=app.py     
 FLASK_DEBUG=TRUE
 # postgresql+psycopg://{user}:{password}@{host}/{database}
-DB_URL=postgresql+psycopg://postgres:12345@localhost/orm_test
+DB_URL=postgresql+psycopg://postgres:Etheria7373!@localhost/orm_test
